[package]
name = "rypt"
version = "0.1.0"
authors = ["Alexander Shtuchkin <ashtuchkin@gmail.com>"]
edition = "2018"

#description = "..."
#repository = "..."
#homepage = "..."
#documentation = "..."

license = "MIT"

[dependencies]
libsodium-sys = "0.2.2"
prost = "0.5.*"
bytes = "0.4.*"  # prost dependency
crossbeam-channel = "0.3.*"
getopts = "0.2.*"
failure = "0.1.*"
signal-hook = "0.1.*"

# isatty, clear line, password input
termion = "1.5.*"

static_assertions = "0.3.*"

[dev-dependencies]
rand = "0.6.*"
tempfile = "3.0.*"
hex-literal = "0.2.*"

[build-dependencies]
prost-build = "0.5.*"
failure = "0.1.*"

[profile.release]
lto = true