[package]
name = "rypt"
version = "0.8.0"
authors = ["Alexander Shtuchkin <ashtuchkin@gmail.com>"]
edition = "2018"

description = "Versatile standalone command-line encryption tool"
repository = "https://github.com/ashtuchkin/rypt"
homepage = "https://github.com/ashtuchkin/rypt"
#documentation = "https://github.com/ashtuchkin/rypt"

license = "MIT"

[dependencies]
libsodium-sys = "0.2.2"
prost = "0.6.*"
bytes = "0.4.*"  # prost dependency
crossbeam-channel = "0.3.*"
getopts = "0.2.*"
failure = "0.1.*"
static_assertions = "0.3.*"

# We use Rng/RngCore interfaces, but don't use random generator implementations - instead we reimplement
# them using libsodium.
rand = "0.7.*"

[target.'cfg(unix)'.dependencies]
libc = "0.2.*"

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3.*", features = ["processenv", "consoleapi", "wincon"]}

[dev-dependencies]
tempfile = "3.0.*"
hex-literal = "0.2.*"
quickcheck = "0.8.*"

[build-dependencies]
prost-build = "0.5.*"
failure = "0.1.*"

[profile.release]
lto = true